# orpheus-engine

./: .env  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .permissions-cache  0001-Add-GitHub-workflows-for-automatic-release-branch-me.patch  CHANGELOG.md  CONSOLIDATION_COMPLETED.md  CONSOLIDATION_SUMMARY.md  HYBRID_ARCHITECTURE.md  JUDGES_README.md  LICENSE  PLUGIN_IMPLEMENTATION_GUIDE.md  README.md  README.md.new  README.md.updated  RELEASE_NOTES_v1.0.6.md  SETUP.md  TOKENIZERS_FIX_SUMMARY.md  agentic_rag.ipynb  debug-dom.test.tsx  debug-import.js  debug-meter.js  electron-launch.mjs  electron-launch.mjs.new  eslint.config.js  find-absolute-imports.js  fix_dependencies.py  index.html  install-jest-types.sh  package-lock.json  package.json  package.json (to be updated)  package.json.backup-1748661408545  package.json.merge-backup  package.json.new  playwright.config.ts  pnpm-lock.yaml  (+34 more)
.ipynb_checkpoints/: agentic_rag-checkpoint.ipynb  requirements-checkpoint.txt
OEW-main/: CHANGELOG.md  README.md  electron-launch.js  electron-launch.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backup_changes/: package-lock.json  package.json  requirements.txt
backups/: pre-submodule-setup-20250608-181327.txt
chroma_db/: chroma.sqlite3
demo/: .gitignore  COMPLETE_FIX_SUMMARY.md  EXECUTION_ORDER_FIX_REPORT.md  FINAL_SYNTAX_FIX_REPORT.md  HP_AI_Blueprints_BERT_QA_Reference.ipynb  HP_AI_STUDIO_FEEDBACK.md  HP_AI_STUDIO_SETUP_COMPLETE.md  HP_AI_Studio_Judge_Evaluation_Demo.ipynb  HP_AI_Studio_Judge_Evaluation_Demo.ipynb.broken  JUDGES_README.md  NUMPY_IMPORT_FIX.md  OrpheusWebDemo.ipynb  OrpheusWebDemo_restore.ipynb  Orpheus_MLflow_Demo.ipynb  README.md  agentic_rag.ipynb  browser-test.html  demo.sh  demo_status.json  hp_ai_studio_integration_test_results.json  install_dependencies.py  orpheus_demo_session.json  orpheus_magic.py  requirements.txt  start_demo.py  tensorboard_integration.py  test_hp_ai_studio_integration.py  validate_demo.py  verify_compatibility.py
docs/: AI_WORKFLOW_INTEGRATION.md  README.md  (+16 more)
python-backend/: LICENSE  README.md  README_MINI_DAW.md  pyproject.toml  requirements-minimal.txt  requirements.txt  run_mini_daw.py  setup.py  start.py
python-backend/client/: orpheus-backend-client.ts
python-backend/src/orpheus_backend/: __init__.py  config.py  main.py  ml_integration.py  models.py
python-backend/src/orpheus_backend/api/: __init__.py  audio.py  projects.py  system.py
python-backend/src/orpheus_backend/audio/: engine.py
python-backend/src/orpheus_backend/daw_generator/: mini_daw.py  mini_daw_app.py
python-backend/src/orpheus_backend/native/: __init__.py  system_integration.py
python-backend/src/orpheus_backend/websocket/: __init__.py  endpoints.py  manager.py
(+1114 files in other folders)
